{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 40,
  "lineage": "3834f0e1-ea01-5fa7-e06a-ec95e88aff3a",
  "resources": [
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_google_apis_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-21T10:50:22.943-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/haidyhossam-378515/global/firewalls/allow-google-apis-egress",
            "log_config": [],
            "name": "allow-google-apis-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
            "priority": 1000,
            "project": "haidyhossam-378515",
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/firewalls/allow-google-apis-egress",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private-rules"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.google_compute_network.main-vpc",
            "module.Network.google_compute_subnetwork.restricted-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "block_internet_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-21T09:30:14.565-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/haidyhossam-378515/global/firewalls/block-internet-egress",
            "log_config": [],
            "name": "block-internet-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
            "priority": 1000,
            "project": "haidyhossam-378515",
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/firewalls/block-internet-egress",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "private-rules"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.google_compute_network.main-vpc",
            "module.Network.google_compute_subnetwork.restricted-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/haidyhossam-378515/global/networks/main-vpc",
            "mtu": 0,
            "name": "main-vpc",
            "project": "haidyhossam-378515",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc"
          }
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-21T09:30:04.089-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/haidyhossam-378515/regions/us-central1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
            "project": "haidyhossam-378515",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/regions/us-central1/routers/my-router"
          },
          "dependencies": [
            "module.Network.google_compute_network.main-vpc",
            "module.Network.google_compute_subnetwork.management-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "haidyhossam-378515/us-central1/my-router/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "haidyhossam-378515",
            "region": "us-central1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/regions/us-central1/subnetworks/management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.Network.google_compute_network.main-vpc",
            "module.Network.google_compute_router.router",
            "module.Network.google_compute_subnetwork.management-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-21T09:29:50.339-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/haidyhossam-378515/regions/us-central1/subnetworks/management-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "haidyhossam-378515",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/regions/us-central1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.Network.google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-21T09:29:50.411-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/haidyhossam-378515/regions/us-central1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "haidyhossam-378515",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.4.0/24",
                "range_name": "pods"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/regions/us-central1/subnetworks/restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.Network.google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VMs-NAT",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-21T09:29:48.450-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/haidyhossam-378515/global/firewalls/ssh",
            "log_config": [],
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
            "priority": 100,
            "project": "haidyhossam-378515",
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/firewalls/ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.google_compute_network.main-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VMs-NAT",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20230215",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/zones/us-central1-a/disks/private-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/haidyhossam-378515/zones/us-central1-a/instances/private-instance",
            "instance_id": "7584703138840002930",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "KhFEkVvTfjU=",
            "name": "private-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/global/networks/main-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/regions/us-central1/subnetworks/management-subnet",
                "subnetwork_project": "haidyhossam-378515"
              }
            ],
            "project": "haidyhossam-378515",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/haidyhossam-378515/zones/us-central1-a/instances/private-instance",
            "service_account": [
              {
                "email": "instance-sa@haidyhossam-378515.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh"
            ],
            "tags_fingerprint": "pfSjJj1RiUg=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.Network.google_compute_network.main-vpc",
            "module.Network.google_compute_subnetwork.management-subnet",
            "module.VMs-NAT.google_service_account.instance-sa"
          ]
        }
      ]
    }
  ]
}